fix: spacing adjusted

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
   --container-width: 1244px;
 }
+
 [data-theme='dark']{
   --primary-color: #c76a12;
   --secondary-color: #b90f12;
@@ -61,10 +62,12 @@ section {
   margin: 0 auto;
   padding: 0 0.7rem;
 }
+
 .header__logo {
   color: var(--primary-color);
   font-size: 1.5rem;
 }
+
 .header__navbar ul {
   height: 100%;
   gap: 0.5rem;
@@ -73,14 +76,17 @@ section {
   align-items: center;
   flex-wrap: wrap;
 }
+
 .header__navbar ul li {
   margin: 0.1rem;
   text-transform: uppercase;
   font-size: 0.8rem;
 }
+
 .header__navbar ul li .active {
   color: var(--primary-color);
 }
+
 .header__navbar ul li a:hover {
   color: var(--primary-color);
 }
@@ -105,6 +111,7 @@ section {
   margin-top: 1.5rem;
   gap: 0.5rem;
 }
+
 .inicio__btn {
   max-width: 500px;
   width: 100%;
@@ -117,6 +124,7 @@ section {
   border-radius: 4px;
   transition: 0.2s;
 }
+
 .inicio__btn:hover {
   cursor: pointer;
   background-color: var(--text-color);
@@ -130,6 +138,7 @@ section {
   font-weight: bold;
   padding: 1.5rem 0 2.5rem 0;
 }
+
 .problema .cards {
   max-width: 1244px;
   margin: 0 auto;
@@ -139,6 +148,7 @@ section {
   gap: 1.5rem;
   min-height: 390px;
 }
+
 .problema .cards .card {
   display: flex;
   justify-content: center;
@@ -153,16 +163,13 @@ section {
   padding: 0.4rem;
   transition: 0.2s ease;
 }
+
 .problema .cards .card__title {
   font-size: 22px;
 }
+
 .problema .cards .card__text {
   font-size: 16px;
-}
-.problema .cards .card:hover {
-  height: 390px;
-  background-color: var(--text-color);
-  color: var(--bg-color);
 }
 
 .proposta__title {
@@ -171,30 +178,32 @@ section {
   font-weight: bold;
   padding: 1.5rem 0 2.5rem 0;
 }
+
 .proposta .solucoes {
   max-width: 80%;
   margin: 0 auto;
 }
+
 .proposta .solucoes .solucao {
   width: 80%;
+  height: clamp(150px, 150px, 180px);
   border: 2px solid var(--text-color);
   padding: 0.8rem;
   transition: 0.3s ease;
 }
-.proposta .solucoes .solucao:hover {
-  background-color: var(--text-color);
-  color: var(--bg-color);
-  width: 100%;
-}
+
 .proposta .solucoes .solucao:nth-child(2) {
   margin: 1.5rem 0 1.5rem auto;
 }
+
 .proposta .solucoes .solucao__title {
   font-size: 22px;
 }
+
 .proposta .solucoes .solucao__title:nth-child(2) {
   margin-left: auto;
 }
+
 .proposta .solucoes .solucao--reverso .solucao__title {
   display: flex;
   flex-direction: row-reverse;
@@ -205,14 +214,27 @@ section {
   justify-content: space-around;
   max-width: 1244px;
   margin: 0 auto;
-  padding: 0.2rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding: 1rem 0;
   margin-top: 50px;
   text-align: center;
 }
 .footer__list a:hover {
   color: #e5383b;
+}
+
+@media (min-width: 600px) {
+  .problema .cards .card:hover {
+    min-height: 390px;
+    background-color: var(--text-color);
+    color: var(--bg-color);
+  }
+
+  .proposta .solucoes .solucao:hover {
+    background-color: var(--text-color);
+    color: var(--bg-color);
+    width: 100%;
+  }
+
 }
 
 @media (max-width: 600px) {
